objects/ssot__PartyRelationshipType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Relationship Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRole__c</fullName>
        <label>Party Role</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedInverseRecordId__c</fullName>
        <label>Related Inverse Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPartyRole__c</fullName>
        <label>Related Party Role</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1726825234103_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyRelationshipType_RelatedInverse_rel</label>
        <referenceTo>ssot__PartyRelationshipType__dlm</referenceTo>
        <relationshipLabel>PartyRelationshipType_RelatedInverse_rel</relationshipLabel>
        <relationshipName>rel_1726825234103_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>